@@ -6,6 +6,10 @@ Version 5.27.2
 
 Fixed: Issue #931: The "if does exist" test with unmonitor or stop action didn't work properly.
 
+Fixed: Issue #937: If the filesystem check uses mountpoint instead of device and multiple devices
+are defined for the same filesystem with mismatch between /etc/mtab and device name in disk statistics
+path, Monit reported error and disk activity was not reported.
+
 Changed: The debug mode no longer logs error about procfs /proc/<pid>/io and /proc/<pid>/fd open
 errors, because if monit is not running as root, these errors are common as linux doesn't allo to
 read these files if the process belongs to different user. These errors are logged only in extra
